--- a/lectures/htmlcss/index.html
+++ b/lectures/htmlcss/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Does it work?</h1>
+    <h2>Live reload</h2>
+    <h2>Yes!</h2>
+    <h3>Why did I get the error?</h3>
+    <p>Not in repo</p>
 </body>
 </html>
