playing with elements

--- a/lectures/htmlcss/index.html
+++ b/lectures/htmlcss/index.html
@@ -7,9 +7,20 @@
 </head>
 <body>
     <h1>Does it work?</h1>
+    <br>
     <h2>Live reload</h2>
     <h2>Yes!</h2>
     <h3>Why did I get the error?</h3>
+    <p>line this would <br>not be a <a href="https://google.com" target="_blank">link text</a> block</p>
     <p>Not in repo</p>
+    <hr>
+    <footer>
+        <p><em>2024 © Angel B</em></p>
+       <address>
+        <a
+        href="mailto:agbarajas.city@gmail.com">agbarajas.city@gmail.com</a>
+       </address>
+    </footer>
+    <hr>
 </body>
 </html>
