css javascript files

--- a/lectures/htmlcss/index.html
+++ b/lectures/htmlcss/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intro to HTML and CSS</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.js"></script>
+  </head>
+  <body>
     <h1>Does it work?</h1>
-    <br>
+    <br />
     <h2>Live reload</h2>
     <h2>Yes!</h2>
     <h3>Why did I get the error?</h3>
-    <p>line this would <br>not be a <a href="https://google.com" target="_blank">link text</a> block</p>
+    <p>
+      line this would <br />not be a
+      <a href="https://google.com" target="_blank">link text</a> block
+    </p>
     <p>Not in repo</p>
-    <hr>
+    <hr />
     <footer>
-        <p><em>2024 © Angel B</em></p>
-       <address>
-        <a
-        href="mailto:agbarajas.city@gmail.com">agbarajas.city@gmail.com</a>
-       </address>
+      <p><em>2024 © Angel B</em></p>
+      <address>
+        <a href="mailto:agbarajas.city@gmail.com">agbarajas.city@gmail.com</a>
+      </address>
     </footer>
-    <hr>
-</body>
+    <hr />
+  </body>
 </html>
