--- a/lectures/htmlcss/index.html
+++ b/lectures/htmlcss/index.html
@@ -3,28 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Intro to HTML and CSS</title>
+    <title>My Website</title>
     <link rel="stylesheet" href="style.css" />
     <script src="main.js"></script>
   </head>
   <body>
-    <h1>Does it work?</h1>
-    <br />
-    <h2>Live reload</h2>
-    <h2>Yes!</h2>
-    <h3>Why did I get the error?</h3>
-    <p>
-      line this would <br />not be a
-      <a href="https://google.com" target="_blank">link text</a> block
-    </p>
-    <p>Not in repo</p>
-    <hr />
-    <footer>
-      <p><em>2024 © Angel B</em></p>
-      <address>
-        <a href="mailto:agbarajas.city@gmail.com">agbarajas.city@gmail.com</a>
-      </address>
-    </footer>
-    <hr />
+    <header>
+      <h1>Welcome to my website</h1>
+    </header>
   </body>
 </html>
