added main n first sect

--- a/lectures/htmlcss/index.html
+++ b/lectures/htmlcss/index.html
@@ -11,5 +11,16 @@
     <header>
       <h1>Welcome to my website</h1>
     </header>
+    <main>
+      <p>This webpage demonstrates my efforts in creating a webpage :D</p>
+    </main>
+    <section>
+      <h2> My Fav Fruits</h2>
+     <ul>
+      <li>Strawberry</li>
+      <li>Mango</li>
+      <li>Blueberries</li>
+     </ul>
+    </section>
   </body>
 </html>
