main style n ol

--- a/lectures/htmlcss/index.html
+++ b/lectures/htmlcss/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Website</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="main.js"></script>
-  </head>
-  <body>
-    <header>
-      <h1>Welcome to my website</h1>
-    </header>
-    <main>
-      <p>This webpage demonstrates my efforts in creating a webpage :D</p>
-    </main>
-    <section>
-      <h2> My Fav Fruits</h2>
-     <ul>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Website</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="main.js"></script>
+</head>
+
+<body>
+  <header>
+    <h1>Welcome to my website</h1>
+  </header>
+  <main>
+    <p>This webpage demonstrates my efforts in creating a webpage :D</p>
+  <section>
+    <h2> My Fav Fruits</h2>
+    <ul>
       <li>Strawberry</li>
       <li>Mango</li>
       <li>Blueberries</li>
-     </ul>
-    </section>
-  </body>
+    </ul>
+
+  </section>
+  <section>
+    <h2>Steps to Make A Sandwich</h2>
+    <ol>
+      <li>Get Bread Slices</li>
+      <li>Add your fav fillings</li>
+      <li>Put the slides together >:]</li>
+    </ol>
+  </section>
+
+</main>
+</body>
+
 </html>
