my understanding of CSS

--- a/lectures/htmlcss/index.html
+++ b/lectures/htmlcss/index.html
@@ -11,25 +11,25 @@
 
 <body>
   <header>
-    <h1>Welcome to my website</h1>
+    <h1 class="outline">Welcome to my website</h1>
   </header>
   <main>
     <p>This webpage demonstrates my efforts in creating a webpage :D</p>
   <section>
     <h2> My Fav Fruits</h2>
     <ul>
-      <li>Strawberry</li>
-      <li>Mango</li>
-      <li>Blueberries</li>
+      <li class="red">Strawberry</li>
+      <li class="orange">Mango</li>
+      <li class="blue">Blueberries</li>
     </ul>
 
   </section>
   <section>
     <h2>Steps to Make A Sandwich</h2>
     <ol>
-      <li>Get Bread Slices</li>
-      <li>Add your fav fillings</li>
-      <li>Put the slides together >:]</li>
+      <li>Get Bread Slices 🍞 </li>
+      <li>Add your fav fillings 🍅</li>
+      <li>Put the slides together >:] 🥪</li>
     </ol>
   </section>
 
