--- a/lectures/htmlcss/index.html
+++ b/lectures/htmlcss/index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Website</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Website</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="main.js"></script>
-</head>
+  <body>
+    <header>
+      <h1 class="outline">Welcome to my website</h1>
+    </header>
+    <main>
+      <p>This webpage demonstrates my efforts in creating a webpage :D</p>
+      <section>
+        <h2>My Fav Fruits</h2>
+        <ul>
+          <li class="red">Strawberry</li>
+          <li class="orange">Mango</li>
+          <li class="blue">Blueberries</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Steps to Make A Sandwich</h2>
+        <ol>
+          <li>Get Bread Slices 🍞</li>
+          <li>Add your fav fillings 🍅</li>
+          <li>Put the slides together >:] 🥪</li>
+        </ol>
+      </section>
 
-<body>
-  <header>
-    <h1 class="outline">Welcome to my website</h1>
-  </header>
-  <main>
-    <p>This webpage demonstrates my efforts in creating a webpage :D</p>
-  <section>
-    <h2> My Fav Fruits</h2>
-    <ul>
-      <li class="red">Strawberry</li>
-      <li class="orange">Mango</li>
-      <li class="blue">Blueberries</li>
-    </ul>
-
-  </section>
-  <section>
-    <h2>Steps to Make A Sandwich</h2>
-    <ol>
-      <li>Get Bread Slices 🍞 </li>
-      <li>Add your fav fillings 🍅</li>
-      <li>Put the slides together >:] 🥪</li>
-    </ol>
-  </section>
-
-</main>
-</body>
-
+      <section>
+        <h2>Contact Us</h2>
+      </section>
+    </main>
+    <footer>Copyright &copy Angel Barajas</footer>
+  </body>
 </html>
