--- a/lectures/htmlcss/index.html
+++ b/lectures/htmlcss/index.html
@@ -33,6 +33,15 @@
 
       <section>
         <h2>Contact Us</h2>
+        <form action="">
+          <label>Name:></label>
+            <input type="text">
+            <label>Email:></label>
+            <input type="email">
+            <label>Message</label>
+            <textarea ols="30" rows="10"></textarea>
+
+            </form>
       </section>
     </main>
     <footer>Copyright &copy Angel Barajas</footer>
