finished and styled form

--- a/lectures/htmlcss/index.html
+++ b/lectures/htmlcss/index.html
@@ -39,8 +39,8 @@
             <label>Email:></label>
             <input type="email">
             <label>Message</label>
-            <textarea ols="30" rows="10"></textarea>
-
+            <textarea ols="30" rows="10"></textarea><br>
+            <button>Submit</button>
             </form>
       </section>
     </main>
