--- a/lectures/bootstrap/index.html
+++ b/lectures/bootstrap/index.html
@@ -13,13 +13,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-auto">
-                <div class="box"></div>
-            </div>
-            <div class="col-4">
-                <div class="box"></div>
-            </div>
-            <div class="col-">
+            <div class="col">
                 <div class="box"></div>
             </div>
             <div class="col">
