--- a/lectures/bootstrap/index.html
+++ b/lectures/bootstrap/index.html
@@ -12,7 +12,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row row-cols-2 g-3">
+            <div class="col">
+                <div class="row">
+                <div class="col"><div class="box"></div>
+                <div class="col"><div class="box"></div>
+            </div>
+            </div>
+            <div class="col">
+                <div class="box"></div>
+            </div>
+            <div class="col">
+                <div class="box"></div>
+            </div>
             <div class="col">
                 <div class="box"></div>
             </div>
