--- a/lectures/bootstrap/index.html
+++ b/lectures/bootstrap/index.html
@@ -12,26 +12,31 @@
 </head>
 <body>
     <div class="container">
-        <div class="row row-cols-2 g-3">
-            <div class="col">
-                <div class="row">
-                <div class="col"><div class="box"></div>
-                <div class="col"><div class="box"></div>
-            </div>
-            </div>
-            <div class="col">
-                <div class="box"></div>
-            </div>
-            <div class="col">
-                <div class="box"></div>
-            </div>
-            <div class="col">
-                <div class="box"></div>
-            </div>
-            <div class="col">
-                <div class="box"></div>
-            </div>
-        </div>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>First</th>
+                    <th>Lasy</th>
+                    <th>Age</th>
+                </tr>
+            </thead>
+                <tr>
+                    <td>Kyle</td>
+                    <td>Cook</td>
+                    <td>27</td>
+                </tr>
+                <tr>
+                    <td>Sally</td>
+                    <td>Thorn</td>
+                    <td>13</td>
+                </tr>
+                <tr>
+                    <td>Jim</td>
+                    <td>Smith</td>
+                    <td>48</td>
+                </tr>
+        </tbody>
+        </table>
     </div>
 </body>
 </html>
