--- a/lectures/bootstrap/index.html
+++ b/lectures/bootstrap/index.html
@@ -12,15 +12,45 @@
 </head>
 <body>
     <div class="container">
-        <table class="table">
-            <thead>
+        <div class="table-responsive">
+        <table class="table table-hover">
+            <thead class="table">
                 <tr>
                     <th>First</th>
-                    <th>Lasy</th>
+                    <th>Last</th>
                     <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+                    <th>Age</th>
+
                 </tr>
             </thead>
-                <tr>
+        <tbody class="table-group-divider">
+                <tr">
                     <td>Kyle</td>
                     <td>Cook</td>
                     <td>27</td>
@@ -37,6 +67,7 @@
                 </tr>
         </tbody>
         </table>
+    </div>
     </div>
 </body>
 </html>
