--- a/lectures/bootstrap/index.html
+++ b/lectures/bootstrap/index.html
@@ -12,62 +12,14 @@
 </head>
 <body>
     <div class="container">
-        <div class="table-responsive">
-        <table class="table table-hover">
-            <thead class="table">
-                <tr>
-                    <th>First</th>
-                    <th>Last</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-                    <th>Age</th>
-
-                </tr>
-            </thead>
-        <tbody class="table-group-divider">
-                <tr">
-                    <td>Kyle</td>
-                    <td>Cook</td>
-                    <td>27</td>
-                </tr>
-                <tr>
-                    <td>Sally</td>
-                    <td>Thorn</td>
-                    <td>13</td>
-                </tr>
-                <tr>
-                    <td>Jim</td>
-                    <td>Smith</td>
-                    <td>48</td>
-                </tr>
-        </tbody>
-        </table>
-    </div>
+        <div class="btn-group-vertical">
+        <button class="btn btn-outline-primary"
+        data-bs-toggle="button">Test</button>
+        <a class="btn btn-outline-primary">Test</a>
+        <a class="btn btn-outline-primary">Test</a>
+        <a class="btn btn-outline-primary">Test</a>
+        <a class="btn btn-outline-primary">Test</a>
+      </div>
     </div>
 </body>
 </html>
