--- a/lectures/bootstrap/index.html
+++ b/lectures/bootstrap/index.html
@@ -12,14 +12,41 @@
 </head>
 <body>
     <div class="container">
-        <div class="btn-group-vertical">
-        <button class="btn btn-outline-primary"
-        data-bs-toggle="button">Test</button>
-        <a class="btn btn-outline-primary">Test</a>
-        <a class="btn btn-outline-primary">Test</a>
-        <a class="btn btn-outline-primary">Test</a>
-        <a class="btn btn-outline-primary">Test</a>
-      </div>
+        <div class="card-group">
+        <div class="card" style="width: 300px;">
+        <h2 class="card-header">Header</h2>
+        <div class="card-body">
+        <h2 class="card-title">Title</h2>
+        <span class="card-subtitle">Subtitle</span>
+        <div class="card-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cum, quis unde deserunt beatae labore asperiores! Possimus cupiditate velit eligendi.
+        </div>
+        </div>
+        <div class="card-footer">Footer</div>
+        </div>
+        <div class="card" style="width: 300px;">
+            <h2 class="card-header">Header</h2>
+            <div class="card-body">
+            <h2 class="card-title">Title</h2>
+            <span class="card-subtitle">Subtitle</span>
+            <div class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cum, quis unde deserunt beatae labore asperiores! Possimus cupiditate velit eligendi.
+            </div>
+            </div>
+            <div class="card-footer">Footer</div>
+        </div>
+        <div class="card" style="width: 300px;">
+            <h2 class="card-header">Header</h2>
+            <div class="card-body">
+            <h2 class="card-title">Title</h2>
+            <span class="card-subtitle">Subtitle</span>
+            <div class="card-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cum, quis unde deserunt beatae labore asperiores! Possimus cupiditate velit eligendi.
+            </div>
+            </div>
+            <div class="card-footer">Footer</div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
