--- a/lectures/bootstrap/index.html
+++ b/lectures/bootstrap/index.html
@@ -7,46 +7,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-    crossorigin="anonymous"/>
+    crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEk039Gagi7vIsF0jrRAoQmDKKtGBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
-        <div class="card-group">
-        <div class="card" style="width: 300px;">
-        <h2 class="card-header">Header</h2>
-        <div class="card-body">
-        <h2 class="card-title">Title</h2>
-        <span class="card-subtitle">Subtitle</span>
-        <div class="card-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cum, quis unde deserunt beatae labore asperiores! Possimus cupiditate velit eligendi.
-        </div>
-        </div>
-        <div class="card-footer">Footer</div>
-        </div>
-        <div class="card" style="width: 300px;">
-            <h2 class="card-header">Header</h2>
-            <div class="card-body">
-            <h2 class="card-title">Title</h2>
-            <span class="card-subtitle">Subtitle</span>
-            <div class="card-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cum, quis unde deserunt beatae labore asperiores! Possimus cupiditate velit eligendi.
-            </div>
-            </div>
-            <div class="card-footer">Footer</div>
-        </div>
-        <div class="card" style="width: 300px;">
-            <h2 class="card-header">Header</h2>
-            <div class="card-body">
-            <h2 class="card-title">Title</h2>
-            <span class="card-subtitle">Subtitle</span>
-            <div class="card-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cum, quis unde deserunt beatae labore asperiores! Possimus cupiditate velit eligendi.
-            </div>
-            </div>
-            <div class="card-footer">Footer</div>
-        </div>
+    <button class="btn btn-primary" data-bs-toggle="collapse"
+    data-bs-target=".row" aria-expanded="false"
+    aria-controls="row">Toggle</button>
+
+    <div class="row collapse" id="row">
+        <div class="col">
+        <div class="box"></div>
     </div>
+    </div>
+
+    <div class="row collapse">
+        <div class="col">
+        <div class="box"></div>
+    </div>
+    </div>
+
     </div>
 </body>
 </html>
