--- a/lectures/bootstrap/index.html
+++ b/lectures/bootstrap/index.html
@@ -14,23 +14,26 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container">
-    <button class="btn btn-primary" data-bs-toggle="collapse"
-    data-bs-target=".row" aria-expanded="false"
-    aria-controls="row">Toggle</button>
-
-    <div class="row collapse" id="row">
-        <div class="col">
-        <div class="box"></div>
-    </div>
-    </div>
-
-    <div class="row collapse">
-        <div class="col">
-        <div class="box"></div>
-    </div>
-    </div>
-
+        <a href="#" class="navbar-brand">Brand</a>
+        <buton class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-label="Expand Navigation">
+            <span class="navbar-toggler-icon"></span>
+        </buton>
+        <div class="collapse navbar-collapse" id="nav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <A href="#" class="nav-link active" area-current="page">Home</A>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Store</A>
+            </li>
+        </ul>
+        </div>
+        </div>
+        </nav>
+    <div class="container">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam veniam earum voluptate ullam nostrum id quos deleniti dolor velit ad quasi ea voluptatum hic fuga, itaque autem excepturi sint porro.
     </div>
 </body>
 </html>
